--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,5 @@ validate-email==1.3
 Werkzeug==2.0.3
 yagmail==0.15.293
 zipp==3.6.0
+
+pip install cachetools certifi cffi charset-normalizer click cssselect cssutils dataclasses dkimpy dnspython Flask idna importlib-metadata itsdangerous jeepney Jinja2 lxml MarkupSafepremailer pycparser pysqlcipher3 requests semantic-version setuptools-rust typing-extensions urllib3 validate-email Werkzeug yagmail zipp
